# Minecraft-from-scratch-OpenGL

./: .gitignore  CMakeLists.txt  README.md  concatToOGG.sh  convertMP3toOGG.sh
.run/: a5-client (local).run.xml  a5-client.run.xml  a5-server (local).run.xml  a5-server.run.xml
applications/client/: CMakeLists.txt  billboard.cpp  billboard.h  flare.cpp  flare.h  lightning.cpp  lightning.h  main.cpp  particles.cpp  particles.h  point_light.cpp  point_light.h  rain.cpp  rain.h  sky.cpp  sky.h
applications/client/animation/: animation.h  animator.h  animdata.h  assimp_glm_helpers.h  bone.h  mesh.h  model_animation.h
applications/client/audio/: SoundManager.cpp  SoundManager.h  SoundUtil.cpp  SoundUtil.h
applications/client/audio/test/: CircularSoundTest.cpp  CircularSoundTest.h  SoundTest.cpp  SoundTest.h  notes.txt
applications/client/gui/: Gui.cpp  Gui.h  GuiUtils.cpp  GuiUtils.h  IconFont.h
applications/client/input/: InputBinding.h  InputManager.h
applications/client/map/: block.cpp  block.h  chunk.cpp  chunk.h  map.cpp  map.h
applications/client/model/: RemotePlayer.cpp  RemotePlayer.h  animal.cpp  animal.h  animated_model.cpp  animated_model.h  cloud.cpp  cloud.h  enemy.cpp  enemy.h  item.cpp  item.h  model.cpp  model.h  movable_model.cpp  movable_model.h  player.cpp  player.h  screen_model.cpp  screen_model.h  screen_model_test.cpp  screen_model_test.h
applications/client/networking/: ambassador.cpp  ambassador.h  cl_msg.cpp  cl_msg.h
applications/client/render-data/Cubes/clouds/: cloud0.mtl  cloud2.mtl
applications/client/render-data/Cubes/dirt/: dirt.mtl
applications/client/render-data/Cubes/foliage/: foliage.mtl
applications/client/render-data/Cubes/grass/: grass.mtl
applications/client/render-data/Cubes/leafs/: leafs.mtl
applications/client/render-data/Cubes/stone/: stone.mtl
applications/client/render-data/Cubes/torch/: torch.mtl
applications/client/render-data/Cubes/water/: water.mtl
applications/client/render-data/Cubes/wood/: wood.mtl
applications/client/render-data/Items/axt/: axt.mtl
applications/client/render-data/Items/sword/: sword.mtl
applications/client/render-data/animations/: C2.dae  C_digging_with_hand.dae  C_hitting.dae  C_hitting_animation.dae  C_hitting_animation0.dae  C_standing1.dae  C_walking.dae  C_walking_and_digging.dae  C_walking_and_hitting.dae  Character_anim.dae  axe_hitting.dae  axe_hitting_on_screen.dae  axe_hitting_on_screen0.dae  axe_still_on_screen.dae  axt_standing.dae  axt_walking.dae  dog.dae  dog_standing.dae  dog_walking.dae  hand_digging_on_screen.dae  hand_still_on_screen.dae  horse.dae  horse_standing.dae  sword_hitting.dae  sword_hitting0.dae  sword_hitting_on_screen0.dae  sword_hitting_on_screen1.dae  sword_hitting_on_screen2.dae  sword_standing.dae  sword_still_on_screen0.dae  sword_walking.dae  walking_and_digging.dae  zombie.dae  zombie0.dae
applications/client/render-data/lensflare/: ltex0.png~  ltex1.png~
applications/client/render-data/on_screen_objects/: arm.mtl  axe.mtl  sword.mtl
applications/client/render-data/player/: steve.mtl
applications/client/render-data/sounds/rain/: README.md
applications/client/rendering/: buffer.cpp  buffer.h  pass.cpp  pass.h  util.cpp  util.h
applications/client/shader/: anim.fs  anim.vs  copytex.vs  debug.fs  deferred_lighting.fs  final.fs  floor.fs  floor.vs  particle-flare.fs  particle-flare.vs  particle-splat.fs  particle-splat.gs  particle-splat.vs  point_shadow.vs  pos+norm+tc.fs  pos+norm+tc.vs  pos+norm+tc_screen.fs  pos+norm+tc_screen.vs  shadow.vs  sky.fs  sky.vs  sun.fs  sun.vs  types.fs  util.fs
applications/server/: API.txt  AStar.cpp  AStar.h  CMakeLists.txt  Server.cpp  Server.h  SvMap.cpp  SvMap.h  SvMovable.cpp  SvMovable.h  WeatherType.h  image.cpp  image.h  loop_server.sh  main.cpp  sv_msg.cpp  sv_msg.h
common/: CMakeLists.txt
common/cppgl/: .gitignore  CMakeLists.txt
common/cppgl/examples/: CMakeLists.txt  main.cpp
common/cppgl/src/: CMakeLists.txt  camera.cpp  context.cpp  context.h  cppgl.h  geometry.cpp  globals.cpp  globals.h  gui.cpp  gui.h  material.cpp  mesh.cpp  mesh.h  query.h  shader.cpp  shader.h  texture.cpp  texture.h
common/irrKlang-64bit-1.6.0/include/: ik_ISoundEngine.h
common/networking/: CMakeLists.txt  MathUtil.cpp  MathUtil.h  Message.h  daytime.cpp  daytime.h  network.cpp  network.h
exercise_sheet/: README.md  README_proj.md  a5.tex  convert_img
exercise_sheet/gdv/: faltmarken.eps  fensterrahmen.eps
exercise_sheet/gdv/LOGOS/FAU/EPS/: fautxt.eps
exercise_sheet/gdv/LOGOS/Techfak/EPS/: balken.eps  techfak-logo.eps  techfak-logo_bw.eps  techfak_komb.eps  techfak_komb_gr.eps  techfaktxt.eps  techfaktxt_bw.eps
